kubernetes/manifests/monitoring/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.slux-solutions.com`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
  tls:
    secretName: slux-solutions-wildcard-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.slux-solutions.com`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: prometheus-service
          port: 9090
